Reetan.Nayak Dev 25/force-app/main/default/objects/TestResult__c/TestResult__c.object-meta.xml
<CustomObject>
    <label>TestResult</label>
    <nameField>
        <displayFormat>Q{000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>