Reetan.Nayak Dev 25/force-app/main/default/objects/TestResult__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>10</length>
    <type>Text</type>
</CustomField>