Reetan.Nayak Dev 25/force-app/main/default/objects/TestResult__c/fields/AnswerMark__c.field-meta.xml
<CustomField>
    <fullName>AnswerMark__c</fullName>
    <label>AnswerMark</label>
    <length>3</length>
    <type>Text</type>
</CustomField>