Reetan.Nayak Dev 25/force-app/main/default/objects/TestResult__c/fields/Questions__c.field-meta.xml
<CustomField>
    <fullName>Questions__c</fullName>
    <label>Questions</label>
    <length>20</length>
    <type>Text</type>
</CustomField>